Add apis for current temperature, humidity, pressure
