# swagger.yaml
@@ -53,7 +53,7 @@ paths:
               $ref: "#/definitions/Temperature"
         500:
           description: Undefined error
-  /humditity:
+  /humidity:
     get:
       tags:
         - humidity
@@ -142,6 +142,7 @@ definitions:
         type: number
         format: double
         example: 21,34
+        description: temperature in C°
   Humidity:
     type: object
     properties:
@@ -152,6 +153,7 @@ definitions:
         type: number
         format: double
         example: 58,43
+        description: humidity in %
   Pressure:
     type: object
     properties:
@@ -162,3 +164,4 @@ definitions:
         type: number
         format: double
         example: 926,2 
+        description: pressure in kPa
